src/objects/NewsArticleLike__c.object
<CustomObject>
    <fields>
        <fullName>News_Article__c</fullName>
        <label>News Article</label>
        <referenceTo>News_Article__c</referenceTo>
        <relationshipLabel>NewsArticleLikes</relationshipLabel>
        <relationshipName>NewsArticleLikes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unique_Key__c</fullName>
        <description>Concatenation of the User Id and Article Id to ensure uniqueness of likes</description>
        <externalId>true</externalId>
        <label>Unique Key</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NewsArticleLikes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>NewsArticleLike</label>
    <nameField>
        <label>NewsArticleLike Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NewsArticleLikes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>